# pico-scheduler-template

./: CMakeLists.txt  README.md  main.c  makefile  platform.h  tusb_config.h
src/: CMakeLists.txt  cdc.c  cdc.h  main.c  platform.h  tusb_config.h  usb_descriptors.c  usb_func.c  usb_func.h
